[project]
name = "SlyYTAAPI"
version = "0.2.0"
description = "No-boilerplate, async and typed YouTube Analytics API access."
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
authors = [{name="Dunkyl 🔣🔣"}]
classifiers = [ "Operating System :: OS Independent" ]
dependencies = [ 'SlyAPI >= 0.4.3' ]

[project.optional-dependencies]
dev = [
    # testing
    'pytest',
    'pytest-asyncio',

    # docs
    'myst-parser',
    'furo',
    'sphinxcontrib-trio',
    'sphinx-copybutton',
    'sphinxext-opengraph'
]

[project.urls]
Homepage = "https://docs.dunkyl.net/SlyYTAAPI-Python/"
Repository = "https://github.com/dunkyl/SlyYTAAPI-Python"
Documentation = "https://docs.dunkyl.net/SlyYTAAPI-Python/"
"Bug Tracker" = "https://github.com/dunkyl/SlyYTAAPI-Python/issues"

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"] 