[metadata]
name = SlyYTAAPI
version = 0.1.0
author = Dunkyl 🔣🔣
# author_email = 
description = No-boilerplate, async and typed YouTube Analytics API access.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dunkyl/SlyPyYTAAPI
project_urls =
    Bug Tracker = https://github.com/dunkyl/SlyPyYTAAPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    SlyAPI >= 0.2.2

[options.extras_require]
dev =
    pytest
    pytest-asyncio

[options.packages.find]
where = src